RI-45 bugfix2: navbar is hidden behind the content

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ h1 {
   letter-spacing: 0.1rem;
   text-align: center;
   text-transform: uppercase;
+  padding-bottom: 3rem;
 }
 
 h3 {
